fixed overlap

--- a/humans-proj/src/pages/components/Header/Header.css
+++ b/humans-proj/src/pages/components/Header/Header.css
@@ -61,10 +61,11 @@ h1 {
     list-style-type: none;
     color: white;
     text-decoration: none;
-    margin-left: 3vw;
-    position: relative;
+    position: absolute;
     justify-content: center;
     max-width: min-content;
+    left:40%;
+    
 }
 
 .arrow {
